# TaagerDash

./: .gitignore  PRODUCT.md  README.md  docker-compose.yml
.github/workflows/: ci.yml  deploy.yml  terraform.yml
.serena/: project.yml
.serena/memories/: codebase-overview.md  conventions.md  core.md  suggested_commands.md  task_completion.md  tech_stack.md
.serena/memories/backend/: core.md
.serena/memories/frontend/: core.md
backend/: .dockerignore  .env.example  Dockerfile  fly.toml  pyproject.toml  requirements.txt
backend/alembic/: env.py
backend/alembic/versions/: 000_initial.py  001_add_invite_tokens.py  002_add_teams.py
backend/app/: main.py
backend/app/api/: deps.py
backend/app/api/routers/: auth.py  funnel.py  insights.py  invites.py  targets.py  teams.py  users.py
backend/app/connectors/: __init__.py  base.py
backend/app/core/: config.py  database.py  security.py
backend/app/models/: __init__.py  ad_insight.py  invite_token.py  order_funnel.py  platform_connection.py  target.py  team.py  user.py
backend/app/schemas/: ad_insight.py  funnel.py  insights.py  invite.py  target.py  team.py  user.py
backend/app/services/: metrics.py
backend/scripts/: seed_admin.py
backend/tests/: test_metrics.py
docs/superpowers/specs/: 2026-07-12-easyorders-integration-design.md  2026-07-12-readme-design.md
frontend/: .eslintrc.cjs  Dockerfile  index.html  package-lock.json  package.json  tailwind.config.js
frontend/src/: App.tsx  index.css  main.tsx
frontend/src/components/: Layout.tsx
frontend/src/lib/: api.ts  fmt.ts
(+32 files in other folders)
