[project]
name = "consolidated-dashboard"
version = "0.1.0"
description = "Consolidated TikTok / Meta / Snapchat ad performance dashboard"
requires-python = ">=3.12"

dependencies = [
    # Web framework
    "fastapi==0.111.0",
    "uvicorn[standard]==0.29.0",
    "python-multipart==0.0.9",

    # Database
    "sqlalchemy==2.0.30",
    "asyncpg==0.29.0",
    "alembic==1.13.1",
    "psycopg2-binary==2.9.9",

    # Auth / security
    "passlib[bcrypt]==1.7.4",
    "python-jose[cryptography]==3.3.0",
    "cryptography==42.0.7",

    # Config
    "pydantic==2.7.1",
    "pydantic-settings==2.2.1",
    "python-dotenv==1.0.1",

    # Scheduling (Phase 3 ingestion)
    "apscheduler==3.10.4",

    # HTTP client (platform connectors)
    "httpx==0.27.0",
]

[project.optional-dependencies]
dev = [
    "pytest==8.2.0",
    "pytest-asyncio==0.23.6",
    "httpx==0.27.0",
]

[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I"]   # pycodestyle errors, pyflakes, isort
ignore = ["E501"]           # line length handled by formatter

[tool.pyright]
venvPath = '.'
venv = '.venv'
